marinka full details reviewer

--- a/resources/research_skills/writing/writing.org
+++ b/resources/research_skills/writing/writing.org
@@ -1,5 +1,5 @@
 * Scientific writing
-
+g
 ** General
 
 *** Who is the audience
@@ -57,34 +57,36 @@ This typo was removed from the manuscript. The complete sentence now reads: “.
 * Visualisation
 
 - tufte presentation: https://vimeo.com/216639831
+Department of Biomedical Informatics
 
 
 ** Potential reviewers
 
 Researchers you could consider as a reviewer for your papers.
 
-|-----------------------+-------+----------+------------+---------+--------+---------------+-----------------------------------------------------------------------------------------------|
-| Name                  | ORCID | Position | Department | Address | E-mail | Personal page | Research Focus                                                                                |
-|-----------------------+-------+----------+------------+---------+--------+---------------+-----------------------------------------------------------------------------------------------|
-| [[https://scholar.google.com/citations?user=hQq44SkAAAAJ&hl=en&oi=ao][Jorge Duitama]]         |       |          |            |         |        |               | Bioinformatics, Computational biology, High Throughput Sequencing, Population genomics        |
-| [[https://scholar.google.com/citations?user=b7xoXO0AAAAJ&hl=en&oi=ao][Carlo Cannistraci]]     |       |          |            |         |        |               | Network Science, Computational Biomedicine, Computational Neuroscience                        |
-| Frederic Cazals       |       |          |            |         |        |               |                                                                                               |
-| [[https://scholar.google.com/citations?user=PWV8xOoAAAAJ&hl=en&oi=ao][Jan Baumbach]]          |       |          |            |         |        |               | Bioinformatics, AI, Systems Biology, Systems Medicine                                         |
-| [[https://scholar.google.com/citations?user=jUC0gLMAAAAJ&hl=en&oi=ao][Markus List]]           |       |          |            |         |        |               | Computational Biology, Bioinformatics, Regulatory genomics, Epigenomics Systems Medicine      |
-| [[https://scholar.google.com/citations?user=ugj0at8AAAAJ&hl=en&oi=ao][Predrag Radivojac]]     |       |          |            |         |        |               | ML, Bioinformatics, Computational Biology, Data Mining                                        |
-| [[https://scholar.google.com/citations?user=clYCtpMAAAAJ&hl=en&oi=sra][Richard Röttger]]       |       |          |            |         |        |               | ML, DL, Bioinformatics, clustering                                                            |
-| [[https://scholar.google.com/citations?user=pGfLM1gAAAAJ&hl=nl&oi=ao][Esti Yeger-Lotem]]      |       |          |            |         |        |               |                                                                                               |
-| [[https://scholar.google.com/citations?user=phfY_ncAAAAJ&hl=en&oi=ao][Michael Stumpf]]        |       |          |            |         |        |               | Theoretical BiologyBiomathematicsQuantitative BiologyStatistical InferenceStochastic Dynamics |
-| [[https://scholar.google.com/citations?user=DHQy3wcHP4kC&hl=en&oi=ao][Desmond J. Higham]]     |       |          |            |         |        |               | Numerical analysisstochastic computationcomplex networkscomputational biology                 |
-| [[https://scholar.google.com/citations?user=aFCoq2YAAAAJ&hl=en&oi=ao][Travis Gagie]]          |       |          |            |         |        |               | Data structures, data compression                                                             |
-| [[https://scholar.google.com/citations?user=QveXixwAAAAJ&hl=en&oi=ao][Alex Skupin]]           |       |          |            |         |        |               | Spatial Systems Biology, Single Cell Analysis, Brain Energy Metabolism, Cell Fate Dynamics    |
-| [[https://scholar.google.com/citations?user=lWjhNlgAAAAJ&hl=en&oi=ao][Teresa Przytycka]]      |       |          |            |         |        |               |                                                                                               |
-| [[https://scholar.google.com/citations?user=ZYwC_CQAAAAJ&hl=en&oi=ao][Martin Ester]]          |       |          |            |         |        |               | Data Mining, ML, Transfer Learning, Causal Discovery, Precision Medicine                      |
-| Mona Singh            |       |          |            |         |        |               |                                                                                               |
-| [[https://scholar.google.com/citations?user=HpAXYnsAAAAJ&hl=en&oi=ao][Franca Fraternali]]     |       |          |            |         |        |               | Bioinformatics, Computational Biology, Computational Chemistry, Structural Biology            |
-| [[https://scholar.google.com/citations?user=ymEAWXAAAAAJ&hl=en&oi=ao][Peter Klimek]]          |       |          |            |         |        |               |                                                                                               |
-| [[https://scholar.google.com/citations?user=X-HDVW0AAAAJ&hl=en&oi=ao][Chloe-Agathe Azencott]] |       |          |            |         |        |               |                                                                                               |
-|-----------------------+-------+----------+------------+---------+--------+---------------+-----------------------------------------------------------------------------------------------|
+|-----------------------+---------------------+---------------------+--------------------------------------+------------------------------------------------------------------+-------------------------+---------------+-----------------------------------------------------------------------------------------------|
+| Name                  | ORCID               | Position            | Department                           | Address                                                          | E-mail                  | Personal page | Research Focus                                                                                |
+|-----------------------+---------------------+---------------------+--------------------------------------+------------------------------------------------------------------+-------------------------+---------------+-----------------------------------------------------------------------------------------------|
+| [[https://scholar.google.com/citations?user=QveXixwAAAAJ&hl=en&oi=ao][Alex Skupin]]           |                     |                     |                                      |                                                                  |                         |               | Spatial Systems Biology, Single Cell Analysis, Brain Energy Metabolism, Cell Fate Dynamics    |
+| [[https://scholar.google.com/citations?user=b7xoXO0AAAAJ&hl=en&oi=ao][Carlo Cannistraci]]     |                     |                     |                                      |                                                                  |                         |               | Network Science, Computational Biomedicine, Computational Neuroscience                        |
+| [[https://scholar.google.com/citations?user=X-HDVW0AAAAJ&hl=en&oi=ao][Chloe-Agathe Azencott]] |                     |                     |                                      |                                                                  |                         |               |                                                                                               |
+| [[https://scholar.google.com/citations?user=DHQy3wcHP4kC&hl=en&oi=ao][Desmond J. Higham]]     |                     |                     |                                      |                                                                  |                         |               | Numerical analysisstochastic computationcomplex networkscomputational biology                 |
+| [[https://scholar.google.com/citations?user=pGfLM1gAAAAJ&hl=nl&oi=ao][Esti Yeger-Lotem]]      |                     |                     |                                      |                                                                  |                         |               |                                                                                               |
+| [[https://scholar.google.com/citations?user=HpAXYnsAAAAJ&hl=en&oi=ao][Franca Fraternali]]     |                     |                     |                                      |                                                                  |                         |               | Bioinformatics, Computational Biology, Computational Chemistry, Structural Biology            |
+| Frederic Cazals       |                     |                     |                                      |                                                                  |                         |               |                                                                                               |
+| [[https://scholar.google.com/citations?user=PWV8xOoAAAAJ&hl=en&oi=ao][Jan Baumbach]]          |                     |                     |                                      |                                                                  |                         |               | Bioinformatics, AI, Systems Biology, Systems Medicine                                         |
+| [[https://scholar.google.com/citations?user=hQq44SkAAAAJ&hl=en&oi=ao][Jorge Duitama]]         |                     |                     |                                      |                                                                  |                         |               | Bioinformatics, Computational biology, High Throughput Sequencing, Population genomics        |
+| [[https://scholar.google.com/citations?user=YtUDgPIAAAAJ][Marinka Zitnik]]        | [[https://orcid.org/0000-0001-8530-7228][0000-0001-8530-7228]] | Assistant Professor | Department of Biomedical Informatics | Countway Building, Room 309, 10 Shattuck Street, Boston MA 02115 | marinka@hms.harvard.edu | [[https://zitniklab.hms.harvard.edu/][Zitnik Lab]]    | ML, Geometric DL, Knowledge Graphs, Biomedical AI                                             |
+| [[https://scholar.google.com/citations?user=jUC0gLMAAAAJ&hl=en&oi=ao][Markus List]]           |                     |                     |                                      |                                                                  |                         |               | Computational Biology, Bioinformatics, Regulatory genomics, Epigenomics Systems Medicine      |
+| [[https://scholar.google.com/citations?user=ZYwC_CQAAAAJ&hl=en&oi=ao][Martin Ester]]          |                     |                     |                                      |                                                                  |                         |               | Data Mining, ML, Transfer Learning, Causal Discovery, Precision Medicine                      |
+| [[https://scholar.google.com/citations?user=phfY_ncAAAAJ&hl=en&oi=ao][Michael Stumpf]]        |                     |                     |                                      |                                                                  |                         |               | Theoretical BiologyBiomathematicsQuantitative BiologyStatistical InferenceStochastic Dynamics |
+| Mona Singh            |                     |                     |                                      |                                                                  |                         |               |                                                                                               |
+| [[https://scholar.google.com/citations?user=ymEAWXAAAAAJ&hl=en&oi=ao][Peter Klimek]]          |                     |                     |                                      |                                                                  |                         |               |                                                                                               |
+| [[https://scholar.google.com/citations?user=ugj0at8AAAAJ&hl=en&oi=ao][Predrag Radivojac]]     |                     |                     |                                      |                                                                  |                         |               | ML, Bioinformatics, Computational Biology, Data Mining                                        |
+| [[https://scholar.google.com/citations?user=clYCtpMAAAAJ&hl=en&oi=sra][Richard Röttger]]       |                     |                     |                                      |                                                                  |                         |               | ML, DL, Bioinformatics, clustering                                                            |
+| [[https://scholar.google.com/citations?user=lWjhNlgAAAAJ&hl=en&oi=ao][Teresa Przytycka]]      |                     |                     |                                      |                                                                  |                         |               |                                                                                               |
+| [[https://scholar.google.com/citations?user=aFCoq2YAAAAJ&hl=en&oi=ao][Travis Gagie]]          |                     |                     |                                      |                                                                  |                         |               | Data structures, data compression                                                             |
+|-----------------------+---------------------+---------------------+--------------------------------------+------------------------------------------------------------------+-------------------------+---------------+-----------------------------------------------------------------------------------------------|
 
 ** References
 
