--- a/resources/research_skills/reading/README.org
+++ b/resources/research_skills/reading/README.org
@@ -71,15 +71,8 @@ of key-words (e.g., [[https://github.com/sp1ff/elfeed-score/][elfeed]]).
 Depending on the field different terminology is used to reffer to the
 same concept. Below a list of frequently encountered synonyms.
 
-|----------+----------+--------------------------------------------------------------------------------------------------------------------------------|
-| Term     | Synonyms | Notes                                                                                                                          |
-|----------+----------+--------------------------------------------------------------------------------------------------------------------------------|
-| Graphlet | Motif    | Technically not the same: Graphlets are induced,  motifs are not. Yet, people sometimes use 'motif' when they mean 'graphlet'. |
-|----------+----------+--------------------------------------------------------------------------------------------------------------------------------|
-
-+----------+--------------+-------+
-| Term     | Synonyms     | Notes |
-+----------+--------------+-------+
-| Graphlet |    Motif,    | People are very vague here with terminology. Graphlets (induced) and motifs (not induced) are not the same, but        |
-|          |   Subgraph   |       |
-+----------+--------------+-------+
+|----------+----------+----------------------------------------------------------------------------------------------------------------------------|
+| Term     | Synonyms | Notes                                                                                                                      |
+|----------+----------+----------------------------------------------------------------------------------------------------------------------------|
+| Graphlet | Motif    | Although not the same, Graphlets are induced while motifs are not,  people sometimes use 'motifs' refering to 'graphlets'. |
+|----------+----------+----------------------------------------------------------------------------------------------------------------------------|
