--- a/resources/research_skills/reading/README.org
+++ b/resources/research_skills/reading/README.org
@@ -68,8 +68,8 @@ of key-words (e.g., [[https://github.com/sp1ff/elfeed-score/][elfeed]]).
 
 ** Synonyms
 
-Depending on the field different terminology is used to reffer to the
-same concept. Below a list of frequently encountered synonyms.
+Different terminology is sometimes used to reffer to the
+same concept depending on the field. Below a list of frequently encountered synonyms.
 
 |----------+----------+----------------------------------------------------------------------------------------------------------------------------|
 | Term     | Synonyms | Notes                                                                                                                      |
