--- a/resources/research_skills/writing/README.org
+++ b/resources/research_skills/writing/README.org
@@ -1,5 +1,4 @@
 * Scientific writing
-g
 ** General
 
 *** Who is the audience
@@ -68,6 +67,8 @@ Researchers you could consider as a reviewer for your papers.
 | Name                  | ORCID               | Position            | Department                                                             | Address                                                          | E-mail                  | Personal page                | Research Focus                                                                                |
 |-----------------------+---------------------+---------------------+------------------------------------------------------------------------+------------------------------------------------------------------+-------------------------+------------------------------+-----------------------------------------------------------------------------------------------|
 | [[https://scholar.google.com/citations?user=QveXixwAAAAJ&hl=en&oi=ao][Alex Skupin]]           | [[https://orcid.org/0000-0002-8955-8304][0000-0002-8955-8304]] | Associate Professor | Luxembourg Centre for Systems Biomedicine, Integrative Cell Signalling | Biotech II 6, avenue du Swing L-4367 BELVAUX                     | alexander.skupin@uni.lu | [[http://wwwen.uni.lu/lcsb/research/integrative_cell_signalling][Integrative signalling group]] | Spatial Systems Biology, Single Cell Analysis, Brain Energy Metabolism, Cell Fate Dynamics    |
+| Alfredo Vellido       |                     |                     |                                                                        |                                                                  |                         |                              |                                                                                               |
+| Anaïs Baudot          |                     |                     |                                                                        |                                                                  |                         |                              |                                                                                               |
 | [[https://scholar.google.com/citations?user=b7xoXO0AAAAJ&hl=en&oi=ao][Carlo Cannistraci]]     |                     |                     |                                                                        |                                                                  |                         |                              | Network Science, Computational Biomedicine, Computational Neuroscience                        |
 | [[https://scholar.google.com/citations?user=X-HDVW0AAAAJ&hl=en&oi=ao][Chloe-Agathe Azencott]] |                     |                     |                                                                        |                                                                  |                         |                              |                                                                                               |
 | [[https://scholar.google.com/citations?user=DHQy3wcHP4kC&hl=en&oi=ao][Desmond J. Higham]]     |                     |                     |                                                                        |                                                                  |                         |                              | Numerical analysisstochastic computationcomplex networkscomputational biology                 |
@@ -76,6 +77,8 @@ Researchers you could consider as a reviewer for your papers.
 | Frederic Cazals       |                     |                     |                                                                        |                                                                  |                         |                              |                                                                                               |
 | [[https://scholar.google.com/citations?user=PWV8xOoAAAAJ&hl=en&oi=ao][Jan Baumbach]]          |                     |                     |                                                                        |                                                                  |                         |                              | Bioinformatics, AI, Systems Biology, Systems Medicine                                         |
 | [[https://scholar.google.com/citations?user=hQq44SkAAAAJ&hl=en&oi=ao][Jorge Duitama]]         |                     |                     |                                                                        |                                                                  |                         |                              | Bioinformatics, Computational biology, High Throughput Sequencing, Population genomics        |
+| Kristel Van Steen     |                     |                     |                                                                        |                                                                  |                         |                              |                                                                                               |
+| Laura Cantini         |                     |                     |                                                                        |                                                                  |                         |                              |                                                                                               |
 | [[https://scholar.google.com/citations?user=YtUDgPIAAAAJ][Marinka Zitnik]]        | [[https://orcid.org/0000-0001-8530-7228][0000-0001-8530-7228]] | Assistant Professor | Department of Biomedical Informatics                                   | Countway Building, Room 309, 10 Shattuck Street, Boston MA 02115 | marinka@hms.harvard.edu | [[https://zitniklab.hms.harvard.edu/][Zitnik Lab]]                   | ML, Geometric DL, Knowledge Graphs, Biomedical AI                                             |
 | [[https://scholar.google.com/citations?user=jUC0gLMAAAAJ&hl=en&oi=ao][Markus List]]           |                     |                     |                                                                        |                                                                  |                         |                              | Computational Biology, Bioinformatics, Regulatory genomics, Epigenomics Systems Medicine      |
 | [[https://scholar.google.com/citations?user=ZYwC_CQAAAAJ&hl=en&oi=ao][Martin Ester]]          |                     |                     |                                                                        |                                                                  |                         |                              | Data Mining, ML, Transfer Learning, Causal Discovery, Precision Medicine                      |
@@ -83,8 +86,10 @@ Researchers you could consider as a reviewer for your papers.
 | Mona Singh            |                     |                     |                                                                        |                                                                  |                         |                              |                                                                                               |
 | [[https://scholar.google.com/citations?user=ymEAWXAAAAAJ&hl=en&oi=ao][Peter Klimek]]          |                     |                     |                                                                        |                                                                  |                         |                              |                                                                                               |
 | [[https://scholar.google.com/citations?user=ugj0at8AAAAJ&hl=en&oi=ao][Predrag Radivojac]]     |                     |                     |                                                                        |                                                                  |                         |                              | ML, Bioinformatics, Computational Biology, Data Mining                                        |
+| Ricard Solé           |                     |                     |                                                                        |                                                                  |                         |                              |                                                                                               |
 | [[https://scholar.google.com/citations?user=clYCtpMAAAAJ&hl=en&oi=sra][Richard Röttger]]       |                     |                     |                                                                        |                                                                  |                         |                              | ML, DL, Bioinformatics, clustering                                                            |
 | [[https://scholar.google.com/citations?user=lWjhNlgAAAAJ&hl=en&oi=ao][Teresa Przytycka]]      |                     |                     |                                                                        |                                                                  |                         |                              |                                                                                               |
+| Travis Gagie          |                     |                     |                                                                        |                                                                  |                         |                              |                                                                                               |
 | [[https://scholar.google.com/citations?user=aFCoq2YAAAAJ&hl=en&oi=ao][Travis Gagie]]          |                     |                     |                                                                        |                                                                  |                         |                              | Data structures, data compression                                                             |
 |-----------------------+---------------------+---------------------+------------------------------------------------------------------------+------------------------------------------------------------------+-------------------------+------------------------------+-----------------------------------------------------------------------------------------------|
 
