--- a/resources/machine_learning/embedding/README.org
+++ b/resources/machine_learning/embedding/README.org
@@ -6,10 +6,11 @@ In the table below, we present some key reading for network embedding, approachi
 it from an algorithmic perspective (i.e., not considering key
 applications).
 
-|-----------------------------------------------------------------------------------+-----------------------------------------------------------+---------------------------+------+---------------------------|
-| Title                                                                             | Relevance                                                 | Group                     | Year | DOI                       |
-|-----------------------------------------------------------------------------------+-----------------------------------------------------------+---------------------------+------+---------------------------|
-| Neural Word Embedding as Implicit Matrix Factorization                            | 1. State-of-the-art node embedding = PPMI + factorisation | Omer Levy & Yoav Goldberg | 2014 | [[https://dl.acm.org/doi/10.5555/2969033.2969070][10.5555/2969033.2969070]]   |
-| A Comprehensive Survey of Graph Embedding:  Problems, techniques and Applications | 1. Taxonomy of network based problems and methods         | Kevin Chen-Chuan Chang    | 2018 | [[https://doi.org/10.1109/TKDE.2018.2807452][10.1109/TKDE.2018.2807452]] |
-| To embed or not: network embedding as a paradigm in computational biology         | 1. Motivates embedding over direct graph based algorithms | Sharan                    | 2019 | [[https://doi.org/10.3389/fgene.2019.00381][10.3389/fgene.2019.00381]]  |
-|-----------------------------------------------------------------------------------+-----------------------------------------------------------+---------------------------+------+---------------------------|
+|---------------------------------------------------------------------------------------+--------------------------------------------------------------------------+---------------------------+------+---------------------------|
+| Title                                                                                 | Relevance                                                                | Group                     | Year | DOI                       |
+|---------------------------------------------------------------------------------------+--------------------------------------------------------------------------+---------------------------+------+---------------------------|
+| Neural Word Embedding as Implicit Matrix Factorization                                | 1. State-of-the-art word embedding = PPMI + factorisation                | Omer Levy & Yoav Goldberg | 2014 | [[https://dl.acm.org/doi/10.5555/2969033.2969070][10.5555/2969033.2969070]]   |
+| Network Embedding as Matrix Factorization: Unifying DeepWalk, LINE, PTE, and node2vec | 1. state-of-the-art node embedding = random walks + PPMI + factorisation | Jie Tang                  | 2018 | [[https://doi.org/10.1145/3159652.3159706][10.1145/3159652.3159706]]   |
+| A Comprehensive Survey of Graph Embedding:  Problems, techniques and Applications     | 1. Taxonomy of network based problems and methods                        | Kevin Chen-Chuan Chang    | 2018 | [[https://doi.org/10.1109/TKDE.2018.2807452][10.1109/TKDE.2018.2807452]] |
+| To embed or not: network embedding as a paradigm in computational biology             | 1. Motivates embedding over direct graph based algorithms                | Sharan                    | 2019 | [[https://doi.org/10.3389/fgene.2019.00381][10.3389/fgene.2019.00381]]  |
+|---------------------------------------------------------------------------------------+--------------------------------------------------------------------------+---------------------------+------+---------------------------|
