--- a/resources/scientific_computing/README.org
+++ b/resources/scientific_computing/README.org
@@ -8,26 +8,25 @@ Approaches: interfaces
 
 * A default Project structure
 
-* Setting up a Python environment with Micro-mamba (conda)
+* Setting up a Python environment with Micromamba (Conda)
 
 MicroMamba is: 
 - a drop-in replacement for "Conda". MicroMamba is written in c++ and
-  therefore a lot faster than the Conda it replaces. Conda
-  commands should work for Mamba and vice versa.
+  therefore a lot faster than the Conda environment manager it
+  replaces. Conda commands should work for Mamba and vice versa.
 - an environment manager. You can have different environments, i.e.,
   versions of python and installed python libraries, for different
   projects.
 - a system package manager. Conda can install different versions of
-  python, python packages and other dependencies (e.g.,
-  libraries). This is useful in case a python package has non-python
-  dependencies. For instance, Snakemake relies on certain c++
-  headers to be available. In contrast, pip can only install python
-  packages and can not solve other kinds of dependencies.
-- cross-platform, supporting linux, macOS and Windows. It alows you to
-  easily replicate your environment on any another machine, which it
-  is great for code portability (i.e. publishing reproducable papers).
+  python, python packages and non-python dependencies (e.g., the
+  python Snakemake relies on certain c++ headers). This, in contrast
+  to pip, which can not solve non-python dependencies.
+- cross-platform, supporting linux, macOS and Windows. This alows you
+  to easily replicate your environment on any another machine, which
+  it is great for code portability (i.e. publishing reproducable
+  papers).
 
-** Install
+** Installing Micromamba
 
 I prefer the [[https://mamba.readthedocs.io/en/latest/user_guide/micromamba.html#][Micromamba]] distribution over the default Mamba distribution, as it is a lot smaller and only installs the bare minimum needed packages to get up and running.
 
@@ -39,7 +38,7 @@ Refresh your shell.
 
 ** Setting up an environment
 
-I included the [[file:default_env.yml][default_env.yml]] file, which descrives a basic python environment:
+I included the [[file:default_env.yml][default_env.yml]] file, which descrives a basic environment:
 - The environment's name: default_env
 - python 3.12
 - A list of packages useful in data-science, software development and academia. 
