--- a/resources/scientific_computing/README.org
+++ b/resources/scientific_computing/README.org
@@ -10,7 +10,7 @@ Approaches: interfaces
 
 * Setting up a Python environment with Micromamba (Conda)
 
-MicroMamba is: 
+[[https://mamba.readthedocs.io/en/latest/user_guide/micromamba.html][MicroMamba]] is: 
 - a drop-in replacement for "Conda". MicroMamba is written in c++ and
   therefore a lot faster than the Conda environment manager it
   replaces. Conda commands should work for Mamba and vice versa.
@@ -26,9 +26,9 @@ MicroMamba is:
   it is great for code portability (i.e. publishing reproducable
   papers).
 
-** Installing Micromamba
+Ofcourse, there are plenty of [[https://dev.to/bowmanjd/python-tools-for-managing-virtual-environments-3bko][alternatives]].
 
-I prefer the [[https://mamba.readthedocs.io/en/latest/user_guide/micromamba.html#][Micromamba]] distribution over the default Mamba distribution, as it is a lot smaller and only installs the bare minimum needed packages to get up and running.
+** Installing Micromamba
 
 To [[https://mamba.readthedocs.io/en/latest/micromamba-installation.html][install]] run:
 #+begin_src bash
